[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10.11"
discord = "^2.3.2"
pillow = "^10.2.0"
pilmoji = "^2.0.4"
pyx = "^0.16"
wand = "^0.6.13"
svgutils = "^0.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
